Reset sources for azure-search-documents to the release version 11.5.4.